fixed text align

--- a/style.css
+++ b/style.css
@@ -3,4 +3,9 @@ body
     background: #333;
     color: #fff;
     font-family: 'Reem Kufi', sans-serif;
+    text-align:center;
+}
+h1
+{
+    margin-top:50%;
 }
